LU-1548 obdecho: delete echo obj after unlink the file.

Set BANSEE flag to the unlinked object, so it can be removed
from cache immediately after unlink.

Signed-off-by: Wang Di <di.wang@whamcloud.com>
Change-Id: Ia8acdfb5c1963ead347679a8d2a54fc979b4c246